--- a/UI/password-manager/package.json
+++ b/UI/password-manager/package.json
@@ -6,11 +6,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "baseui": "^14.0.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "readable-stream": "^4.5.2",
+    "styletron-engine-monolithic": "^1.0.0",
+    "styletron-react": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -40,6 +43,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13"
+    "tailwindcss": "^3.4.13",
+    "typescript": "^4.9.5"
   }
 }
