--- a/ui/package.json
+++ b/ui/package.json
@@ -16,6 +16,8 @@
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.7",
     "framer-motion": "^11.9.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
@@ -48,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.7",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13"
